--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IP Adress Tracker</title>
   <link rel="stylesheet" href="style.css">
-  <script src="index.js"></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
   
