Create input in html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+<label for="ip-address">
+  <h1>ip address tracker</h1>
+</label>
+<input type="text" name="ip-address" id="ip-address">
   <main class="list"></main>
 </body>
 </html>
