--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IP Adress Tracker</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
+  integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
+  crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+  integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+  crossorigin=""></script>
 </head>
 <body>
 <label for="ip-address">
   <h1>ip address tracker</h1>
 </label>
-<input type="text" name="ip-address" id="ip-address">
-  <main class="list"></main>
+<input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain">
+  <main class="list">
+    <p id="ip"></p>
+    <div id="map"></div>
+  </main>
+  <script src="script.js" defer></script>
 </body>
 </html>
