Remove margin and padding for body and add font family

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   crossorigin=""></script>
 </head>
 <body>
-<label for="ip-address">
+<!-- <label for="ip-address"> -->
   <h1>ip address tracker</h1>
-</label>
-<input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain">
+<!-- </label> -->
+<!-- <input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain"> -->
   <main class="list">
     <p id="ip"></p>
     <div id="map"></div>
