style h1 element and add css var

--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
   crossorigin=""></script>
 </head>
 <body>
-<!-- <label for="ip-address"> -->
-  <h1>ip address tracker</h1>
-<!-- </label> -->
-<!-- <input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain"> -->
   <main class="list">
+    <!-- <label for="ip-address"> -->
+  <h1>ip address tracker</h1>
+  <!-- </label> -->
+  <!-- <input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain"> -->
+  </main>
+  <section>
     <p id="ip"></p>
     <div id="map"></div>
-  </main>
+  </section>
   <script src="script.js" defer></script>
 </body>
 </html>
