Display data from API and style

--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
   <!-- <input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain"> -->
   </main>
   <section>
-    <p id="ip"></p>
-    <div id="map"></div>
+    <div class="grid-container">
+      <div class="flex-cover">
+        <p id="ip"></p>
+        <p id="location"></p>
+        <p id="timezone"></p>
+        <p id="isp"></p>
+      </div>
+      <div id="map"></div>
+    </div>
   </section>
   <script src="script.js" defer></script>
 </body>
