Add height to elements

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body>
   <main class="list">
     <!-- <label for="ip-address"> -->
-  <h1>ip address tracker</h1>
+  <h1>iP address tracker</h1>
   <!-- </label> -->
   <!-- <input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain"> -->
   </main>
-  <section>
+  <section class="section">
     <div class="grid-container">
       <div class="flex-cover">
         <p id="ip"></p>
