Fix grid layout

--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
   crossorigin=""></script>
 </head>
 <body>
-  <main class="list">
-    <!-- <label for="ip-address"> -->
+  <!-- <main class="list">
+    <label for="ip-address">
   <h1>iP address tracker</h1>
-  <!-- </label> -->
-  <!-- <input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain"> -->
-  </main>
+  </label>
+  <input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain">
+  </main> -->
   <section class="section">
     <div class="grid-container">
+      <main class="list">
+        <label for="ip-address">
+      <h1>iP address tracker</h1>
+      </label>
+      <input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain">
+      </main>
       <div class="flex-cover">
         <p id="ip"></p>
         <p id="location"></p>
