--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
   </label>
   <input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain">
   </main> -->
-  <section class="section">
+  <main class="mainn">
     <div class="grid-container">
-      <main class="list">
-        <label for="ip-address">
+      <section class="main">
+        <!-- <label for="ip-address"> -->
       <h1>iP address tracker</h1>
-      </label>
-      <input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain">
-      </main>
+      <!-- </label> -->
+      <!-- <input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain"> -->
+      </section>
       <div class="flex-cover">
-        <p id="ip"></p>
-        <p id="location"></p>
-        <p id="timezone"></p>
-        <p id="isp"></p>
+        <p id="ip">ip address <br></p>
+        <p id="location">location <br></p>
+        <p id="timezone">timezone <br></p>
+        <p id="isp">isp <br></p>
       </div>
       <div id="map"></div>
     </div>
-  </section>
+  </main>
   <script src="script.js" defer></script>
 </body>
 </html>
