--- a/index.html
+++ b/index.html
@@ -28,11 +28,18 @@
       <!-- </label> -->
       <!-- <input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain"> -->
       </section>
-      <div class="flex-cover">
-        <p id="ip">ip address <br></p>
-        <p id="location">location <br></p>
-        <p id="timezone">timezone <br></p>
-        <p id="isp">isp <br></p>
+      <div class="text-cover">
+        <div class="text-grid">
+          <p class="dark-gray">ip address</p>
+          <p class="dark-gray">location</p>
+          <p class="dark-gray">timezone</p>
+          <p class="dark-gray">isp</p>
+
+          <p class="very-dark-gray" id="ip"></p>
+          <p class="very-dark-gray" id="location"></p>
+          <p class="very-dark-gray" id="timezone"></p>
+          <p class="very-dark-gray" id="isp"></p>
+        </div>
       </div>
       <div id="map"></div>
     </div>
