Style text and adjust width

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
       <div class="text-cover">
         <div class="text-grid">
           <p class="dark-gray">ip address</p>
-          <p class="dark-gray">location</p>
-          <p class="dark-gray">timezone</p>
-          <p class="dark-gray">isp</p>
+          <p class="p-left dark-gray">location</p>
+          <p class="p-left dark-gray">timezone</p>
+          <p class="p-left dark-gray">isp</p>
 
           <p class="very-dark-gray" id="ip"></p>
-          <p class="very-dark-gray" id="location"></p>
-          <p class="very-dark-gray" id="timezone"></p>
-          <p class="very-dark-gray" id="isp"></p>
+          <p class="p-left very-dark-gray" id="location"></p>
+          <p class="p-left very-dark-gray" id="timezone"></p>
+          <p class="p-left very-dark-gray" id="isp"></p>
         </div>
       </div>
       <div id="map"></div>
