Re-order text in smaller screens

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       </section>
       <div class="text-cover">
         <div class="text-grid">
-          <p class="dark-gray">ip address</p>
-          <p class="p-left dark-gray">location</p>
-          <p class="p-left dark-gray">timezone</p>
-          <p class="p-left dark-gray">isp</p>
+          <p id="order1" class="dark-gray">ip address</p>
+          <p id="order3" class="p-left dark-gray">location</p>
+          <p id="order5" class="p-left dark-gray">timezone</p>
+          <p id="order7" class="p-left dark-gray">isp</p>
 
           <p class="very-dark-gray" id="ip"></p>
           <p class="p-left very-dark-gray" id="location"></p>
