--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   <main class="mainn">
     <div class="grid-container">
       <section class="main">
-        <!-- <label for="ip-address"> -->
-      <h1>iP address tracker</h1>
-      <!-- </label> -->
-      <!-- <input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain"> -->
+      <label for="ip-address">
+        <h1>iP address tracker</h1>
+      </label>
+      <input type="text" name="ip-address" id="ip-address" placeholder="Search for any IP address or domain">
       </section>
       <div class="text-cover">
         <div class="text-grid">
